src/components/Home/ProjectsSection/FeaturedProjects/FeaturedProject/ProjectLinks/ProjectLinks.module.scss
@use "@/styles/mixins" as m;

.projectLinks {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  gap: 8px;
  width: fit-content;
  user-select: none;
  direction: ltr;
  pointer-events: all;
}

@media (max-width: 880px) {
  .projectLinks {
    display: flex;
    top: 0;
    margin: 0;
  }
}

.featuredProject[dir=rtl] .projectLinks {
  flex-direction: row-reverse;
}

.projectLinks a {
  -webkit-tap-highlight-color: transparent;
  display: flex;
  gap: 8px;
  color: #ccd6f6;
  font-size: 1rem;
  padding: 8px 11px 4px 11px;
  border-radius: 4px;
  border: 1px solid #233149;
  outline: solid 2px transparent;
  transition:
    color .3s ease,
    border-color .3s ease,
    outline-color .3s ease;

  &:hover {
    color: var(--green) !important;
    border-color: var(--green) !important;
  }

  &:focus-visible {
    color: var(--green) !important;
    outline-color: var(--green) !important;
    outline-offset: -2px !important;
  }
}

.projectLinks a svg {
  width: 15px;
  height: 15px;
}

